--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Advent of Code 2022",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/index.js\""
+    "dev": "tsc-watch --downlevelIteration --noClear -p ./tsconfig.json --onSuccess \"node ./dist/index.js\""
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,15 @@
   },
   "homepage": "https://github.com/cyppan/AoC2022#readme",
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.11.10",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "eslint": "^8.29.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "lodash": "^4.17.21",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.9.3"
   }
