--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
     "lodash": "^4.17.21",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "@types/ramda": "^0.28.20",
+    "ramda": "^0.28.0",
+    "ts-pattern": "^4.0.6"
   }
 }
