--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@types/memoizee": "^0.4.8",
     "@types/ramda": "^0.28.20",
+    "memoizee": "^0.4.15",
     "ramda": "^0.28.0",
-    "ts-pattern": "^4.0.6"
+    "ts-pattern": "^4.0.6",
+    "typescript-collections": "^1.3.3"
   }
 }
